[package]
name = "llmd"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "llmd"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
